# stellarium

./: .appveyor.yml  CMakeLists.txt
.github/workflows/: ci-beta.yml  ci.yml  code-quality.yml
data/: CMakeLists.txt  mainRes.qrc
data/gui/: normalStyle.css
data/shaders/: AtmosphereFunctions.frag  AtmosphereMain.frag  AtmosphereMain.vert  AtmospherePostProcess.frag  moon.frag  moon.vert  planet.frag  planet.vert  xyYToRGB.frag  xyYToRGB.glsl
models/: CMakeLists.txt
plugins/MeteorShowers/src/: MeteorShowersMgr.cpp  MeteorShowersMgr.hpp
po/stellarium-sky/: af.po  ar.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  jv.po  ko.po  la.po  (+31 more)
po/stellarium-skycultures/: af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cv.po  da.po  de.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  gd.po  gl.po  gn.po  gu.po  he.po  hi.po  hr.po  hrx.po  hu.po  hy.po  (+47 more)
po/stellarium-skycultures-descriptions/: af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cv.po  da.po  de.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  ga.po  gd.po  gl.po  gn.po  gu.po  he.po  hi.po  hr.po  hrx.po  hu.po  (+48 more)
skycultures/: CMakeLists.txt
src/: CMakeLists.txt  StelMainView.cpp  StelMainView.hpp  bayer-pattern.hpp  dither.glsl  main.cpp
src/core/: Dithering.hpp  RefractionExtinction.cpp  StelApp.cpp  StelApp.hpp  StelCore.cpp  StelCore.hpp  StelFileMgr.cpp  StelHips.cpp  StelHips.hpp  StelModule.hpp  StelMovementMgr.cpp  StelOpenGL.cpp  StelOpenGL.hpp  StelPainter.cpp  StelPainter.hpp  StelSRGB.cpp  StelSRGB.hpp  StelSkyDrawer.cpp  StelSkyDrawer.hpp  StelSkyImageTile.cpp  StelTexture.cpp  StelTexture.hpp  StelTextureMgr.cpp  StelTextureMgr.hpp  StelUtils.cpp  StelUtils.hpp
src/gui/: AstroCalcDialog.cpp  AtmosphereDialog.cpp  AtmosphereDialog.hpp  ConfigurationDialog.cpp  SearchDialog.cpp  StelGui.cpp  StelGuiItems.cpp  StelGuiItems.hpp  ViewDialog.cpp  ViewDialog.hpp  astroCalcDialog.ui  atmosphereDialog.ui  configurationDialog.ui  locationDialogGui.ui  searchDialogGui.ui  viewDialog.ui
src/scripting/: StelScriptMgr.cpp
textures/: CMakeLists.txt
util/skyculture-converter/: CMakeLists.txt  NamesOldLoader.cpp  NamesOldLoader.hpp
(+37 files in other folders)
