ADD_SUBDIRECTORY( anutan )
ADD_SUBDIRECTORY( arabic_al-sufi )
ADD_SUBDIRECTORY( arabic_ancient )
ADD_SUBDIRECTORY( arabic_arabian_peninsula )
ADD_SUBDIRECTORY( arabic_lunar_stations )
ADD_SUBDIRECTORY( aztec )
ADD_SUBDIRECTORY( babylonian_mulapin )
ADD_SUBDIRECTORY( babylonian_seleucid )
ADD_SUBDIRECTORY( belarusian )
ADD_SUBDIRECTORY( blackfoot )
ADD_SUBDIRECTORY( boorong )
ADD_SUBDIRECTORY( bugis )
ADD_SUBDIRECTORY( chinese )
ADD_SUBDIRECTORY( chinese_medieval )
ADD_SUBDIRECTORY( chinese_contemporary )
ADD_SUBDIRECTORY( egyptian )
ADD_SUBDIRECTORY( egyptian_dendera )
ADD_SUBDIRECTORY( greek_almagest )
ADD_SUBDIRECTORY( greek_dante )
ADD_SUBDIRECTORY( greek_farnese )
ADD_SUBDIRECTORY( greek_leidenAratea )
ADD_SUBDIRECTORY( hawaiian_starlines )
ADD_SUBDIRECTORY( indian )
ADD_SUBDIRECTORY( inuit )
ADD_SUBDIRECTORY( japanese_moon_stations )
ADD_SUBDIRECTORY( kamilaroi )
ADD_SUBDIRECTORY( khoi-san )
ADD_SUBDIRECTORY( korean )
ADD_SUBDIRECTORY( lokono )
ADD_SUBDIRECTORY( macedonian )
ADD_SUBDIRECTORY( mandar )
ADD_SUBDIRECTORY( maori )
ADD_SUBDIRECTORY( maya )
ADD_SUBDIRECTORY( modern )
ADD_SUBDIRECTORY( modern_st )
ADD_SUBDIRECTORY( mongolian )
ADD_SUBDIRECTORY( navajo )
ADD_SUBDIRECTORY( norse )
ADD_SUBDIRECTORY( northern_andes )
ADD_SUBDIRECTORY( romanian )
ADD_SUBDIRECTORY( ruelle )
ADD_SUBDIRECTORY( sami )
ADD_SUBDIRECTORY( samoan )
ADD_SUBDIRECTORY( sardinian )
ADD_SUBDIRECTORY( seri )
ADD_SUBDIRECTORY( siberian )
ADD_SUBDIRECTORY( tibetan )
ADD_SUBDIRECTORY( tikuna )
ADD_SUBDIRECTORY( tongan )
ADD_SUBDIRECTORY( tukano )
ADD_SUBDIRECTORY( tupi )
ADD_SUBDIRECTORY( vanuatu_netwar )
ADD_SUBDIRECTORY( western )
ADD_SUBDIRECTORY( western_hlad )
ADD_SUBDIRECTORY( western_rey )
ADD_SUBDIRECTORY( western_SnT )
ADD_SUBDIRECTORY( xhosa )
ADD_SUBDIRECTORY( zulu )

INSTALL(FILES "common_star_names.fab" "common_dso_names.fab" DESTINATION ${SDATALOC}/skycultures)
